HW3-4-5/expression/Expression.g4
grammar Expression;

expression : additiveExpression EOF;

additiveExpression : multiplicativeExpression ( ('+' | '-') multiplicativeExpression )*;

multiplicativeExpression : primaryExpression ( ('*' | '/') primaryExpression )*;

primaryExpression : NUMBER | '(' expression ')';

NUMBER : [0-9]+ ;
WS : [ \t\r\n]+ -> skip ;
